--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--BİSMİLLA-->
+<!--BİSMİLLA BAŞLADIM PROJEYE-->
 
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -89,4 +89,6 @@
         
         </script>
     </body>
+    
+    <!--BİSMİLLA BİTİRDİM PROJEYİ-->
 </html>
